--- a/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_navigation.scss
+++ b/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_navigation.scss
@@ -208,4 +208,9 @@
       font-size: 30px;
     }
   }
+
+  .custom-logo {
+    display: block;
+  }
+
 }
